<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegistrationWindow">

    <TextView
        android:id="@+id/idHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/type"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/violet" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/sportsmanButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/sportsman"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sportsman_icon" />

        <ImageButton
            android:id="@+id/coachButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:src="@drawable/coach_icon"
            android:contentDescription="@string/coach"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:layout_marginStart="20dp"
        />

    </LinearLayout>

</LinearLayout>
